--- a/website-asignment/blog-posts/study-ch.html
+++ b/website-asignment/blog-posts/study-ch.html
@@ -112,33 +112,32 @@
             <!-- single hobby -->
             <div class="hobbies__single-hobby">
               <div class="hobbies__single-hobby-icon">
-                <i class="fas fa-film hobby-fnt"></i>
+                <i class="fas fa-search hobby-fnt"></i>
               </div>
-              <h2 class="hobbies__single-hobby-title">Srudy Choice Activities</h2>
+              <h2 class="hobbies__single-hobby-title">Study Choice Activities</h2>
               <p class="hobbies__single-hobby-text">
-                I chose this programme because of the unique opportunities in regards to learning which it offers. One example would be the teamwork. I consider working in small groups and helping each other something very valuable. Myself being a person without a dense programming background, the possibility to turn to some of my more experienced fellow students sounds very study-friendly. Another reason is the "apply what you learn" logic which this programme follows. In this field especially, putting theory into practice is a great way to learn and understand.
-              </p>
+               I knew I wanted to study in The Netherlands as the IT sector is very strong and fast-growing here. Another reason were the universities of applied sciences which, I consider of great importance. I researched a lot of universities but in the end what helped me make up my mind and choose HZ, were the friendly people at HZ who made me feel welcomed.
             </div>
             <!-- end of single hobby -->
             <!-- single hobby -->
             <div class="hobbies__single-hobby">
               <div class="hobbies__single-hobby-icon">
-                <i class="fas fa-book hobby-fnt"></i>
+                <i class="far fa-calendar-alt hobby-fnt"></i>
               </div>
               <h2 class="hobbies__single-hobby-title">After Graduating</h2>
               <p class="hobbies__single-hobby-text">
-               I have always considered myself something of a Jack of all trades, so a position as a full stack developer sounds very interesting to me, as it offers the opportunity to keep pace with both front and back end developments and it makes you constantly adapt to changes, which I consider very valuable. But what I would be most happy to do is combine my previous linguistic experience with IT(machine translation, AI.... but that is very far in the future). From this programme, I expect to take the interest I already have in this subject and transform it into experience and knowledge, in a sence, to be the greatest stepping stone. 
+               A position as a full stack developer sounds very interesting to me, as it makes you constantly adapt to changes. But what I would be most happy to do is combine my previous linguistic experience with IT(machine translation, AI.... but that is very far in the future). From this programme, I expect to take the interest I already have in this subject and transform it into experience and knowledge. 
               </p>
             </div>
             <!-- end of single hobby -->
             <!-- single hobby -->
             <div class="hobbies__single-hobby">
               <div class="hobbies__single-hobby-icon">
-                <i class="fas fa-dumbbell hobby-fnt"></i>
+                <i class="fas fa-users hobby-fnt"></i>
               </div>
               <h2 class="hobbies__single-hobby-title">Motivate My Study</h2>
               <p class="hobbies__single-hobby-text">
-               I chose this programme because of the unique opportunities in regards to learning which it offers. One example would be the teamwork. I consider working in small groups and helping each other something very valuable. Myself being a person without a dense programming background, the possibility to turn to some of my more experienced fellow students sounds very study-friendly. Another reason is the "apply what you learn" logic which this programme follows. In this field especially, putting theory into practice is a great way to learn and understand.
+                I chose this programme because of the learning opportunities which it offers. One example would be the teamwork. I consider working in small groups and helping each other something very valuable. Another reason is the "apply what you learn" logic which this programme follows. Putting theory into practice is a great way to learn and understand.
               </p>
             </div>
             <!-- end of single hobby -->
