--- a/website-asignment/blog-posts/swot-a.html
+++ b/website-asignment/blog-posts/swot-a.html
@@ -111,44 +111,44 @@
             <!-- single hobby -->
             <div class="hobbies__single-hobby">
               <div class="hobbies__single-hobby-icon">
-                <i class="fas fa-film hobby-fnt"></i>
+                <i class="fas fa-exclamation-triangle hobby-fnt"></i>
               </div>
-              <h2 class="hobbies__single-hobby-title">Threads</h2>
+              <h2 class="hobbies__single-hobby-title">Threats</h2>
               <p class="hobbies__single-hobby-text">
-               Initially, the fact that I am transferring from another country with a different language could be a little bit of a setback, but that is only until the adjustment period passes.  As far as my weaknesses, I am aware that they may cause me some inconveniences in my studies, but I firmly believe that they will not impede me in any way whatsoever to achieve my goals.
+               Initially, the fact that I am transferring from another country could be a setback. As far as my weaknesses, I am aware that they may cause me some inconveniences, but I firmly believe that they will not impede me in any way to achieve my goals.
               </p>
             </div>
             <!-- end of single hobby -->
             <!-- single hobby -->
             <div class="hobbies__single-hobby">
               <div class="hobbies__single-hobby-icon">
-                <i class="fas fa-book hobby-fnt"></i>
+                <i class="fas fa-question hobby-fnt"></i>
               </div>
               <h2 class="hobbies__single-hobby-title">Opportunities</h2>
               <p class="hobbies__single-hobby-text">
-               subject area in which one can never learn everything. Also my ability to instruct myself will be of great help as well, inasmuch as it is a very valuable trait to have in my mind. When it comes to my weaknesses, overthinking can be a double-edged sword, as it can prepare you for situations others may not have considered.
+                My curiosity and my ability to instruct myself will be of great help in this programme. When it comes to my weaknesses, overthinking can be a double-edged sword, as it can prepare you for situations others may not have considered.
               </p>
             </div>
             <!-- end of single hobby -->
             <!-- single hobby -->
             <div class="hobbies__single-hobby">
               <div class="hobbies__single-hobby-icon">
-                <i class="fas fa-dumbbell hobby-fnt"></i>
+                <i class="fas fa-user-minus hobby-fnt"></i>
               </div>
               <h2 class="hobbies__single-hobby-title">Weaknesses</h2>
               <p class="hobbies__single-hobby-text">
-               subject area in which one can never learn everything. Also my ability to instruct myself will be of great help as well, inasmuch as it is a very valuable trait to have in my mind. When it comes to my weaknesses, overthinking can be a double-edged sword, as it can prepare you for situations others may not have considered.
+               I often suffer from imposter syndrome, considering myself not up to par with other peers, even though I know that is not the case. I am also a big overthinker, which has often impeded me in many situations. I also consider myself somewhat of a slower learner.
               </p>
             </div>
             <!-- end of single hobby -->
             <!-- single hobby -->
             <div class="hobbies__single-hobby">
               <div class="hobbies__single-hobby-icon">
-                <i class="fas fa-dumbbell hobby-fnt"></i>
+                <i class="fas fa-user-plus hobby-fnt"></i>
               </div>
               <h2 class="hobbies__single-hobby-title">Strenghts</h2>
               <p class="hobbies__single-hobby-text">
-               I am a very good researcher. I am very curious and eager to learn. I love solving problems, even when it takes hours to do so. I also love to teach myself new things and would like to consider myself somewhat of a self-taught person. I am also a very determined person who loves to take on challenges. 
+               I am a very good researcher. I am very curious and eager to learn. I love solving problems, even when it takes hours to do so. I also love to teach myself new things and would like to consider myself somewhat of a self-taught person. 
               </p>
             </div>
             <!-- end of single hobby -->
