--- a/website-asignment/index.html
+++ b/website-asignment/index.html
@@ -101,14 +101,14 @@
           <article class="skills-item">
             <i class="fa fa-code"></i>
             <h1>It is the next logical step for me</h1>
-            <p>As a person with a linguistic background, I believe that programming is the “language” of the future and I believe that, although, it might be different than the other languages that I have studied before, my previous experience will really be of use to me in this programme, because just like human languages share similar concepts so do programming languages. </p>
+            <p>As a person with a linguistic background, I believe that programming is the “language” of the future. Although, it differs from the languages I studied before, my previous experience will really be of use to me in this programme, because programming languages have similar concepts, just like human ones. </p>
           </article>
           <!-- end of   single skill  -->
           <!-- single skill  -->
           <article class="skills-item">
             <i class="fa fa-broadcast-tower"></i>
             <h1>My way of expression</h1>
-            <p>I have always enjoyed making things from scratch. Which is a bit paradoxical because I have never been an artistic person. I am not able to sing, I don't play any instruments and I cannot paint to save my life. But ever since I printed my first "Hello World" I felt "power" in my hands. I created something. What is more, because the world of IT is so vast it is just impossible to get bored of it. </p>
+            <p>I have always enjoyed making things from scratch. Which is strange because I have never been an artistic person. I am not able to sing, I cannot play any instruments, nor paint a straight line. But ever since I printed my first "Hello World" I felt "power" in my hands. I created something. What is more, the world of IT is so vast that it is just impossible to get bored of it. </p>
           </article>
           <!-- end of   single skill  -->
           <!-- single skill  -->
@@ -116,7 +116,7 @@
             <i class="fa fa-language"></i>
             <h1> It is a language</h1>
             <p>
-                Before enrolling in the ICT programme I completed my bachelor’s degree in Applied Linguistics, initially I thought IT and languages belonged in different categories, but I very quickly realized that the two are very similar.  I would really love to take my passion for human languages and the experience from my previous studies and apply it to my future IT carrier path. 
+                Before enrolling in the ICT programme I completed my bachelor’s degree in Applied Linguistics, initially I thought IT and languages belonged in different categories, but I very quickly realized they are very similar. I would really love to take my passion for human languages and the experience from my previous studies and apply it to my future IT carrier path. 
             </p>
           </article>
           <!-- end of   single skill  -->
@@ -125,7 +125,7 @@
             <i class="fa fa-lightbulb"></i>
             <h1>"Eureka"</h1>
             <p>
-              I love to solve problems. I would also like to think that I am proficient at it as well. My fascination with problem solving started from installing games on my computer, which I would later uninstall without ever playing them because the process of solving all the small problems that came up was more interesting to me than the games themselves. I believe the feeling of accomplishment and that “eureka” moment I get when I, for example solve a simple bug in a code or understand what a particular line of code does, makes all the hours spend in front of the screen worth it. 
+              I love to solve problems. My fascination with problem solving started from installing games on my computer, which I would later uninstall without ever playing them because the process of solving all the small problems that came up was more interesting to me than the games themselves. I believe the feeling of accomplishment and that “eureka” moment I get when I, for example solve a simple bug in a code or understand what a particular line of code does, makes it all worth it. 
           </article>
           <!-- end of   single skill  -->
         </div>
