--- a/website-asignment/blog-posts/first-fb.html
+++ b/website-asignment/blog-posts/first-fb.html
@@ -104,9 +104,33 @@
 
       <!-- PARAGRAPTH 2 -->
       <section class="item para-2">
-          <div class="experience">
-              <h2 class="experience-header">SORRY, THIS PAGE IS UNDER CONSTRUCTION</h2>
-              <p class="experience-text"></p>
+          <div class="feedback-container">
+
+            <h2 class="feedback-header">Positives</h2>
+            <div class="fw-underline"></div>
+            <div class="positives">
+              <div class="feedback-img"> <img src="./images/happy.png" alt="" class="feedback-pic"></div>
+              <ul class="feedback-text">
+                <li class="feedback-text-item"> All necessary pages are there with content</li>
+                <li class="feedback-text-item"> Nicely styled</li>
+                <li class="feedback-text-item"> Navigation, side menu, SEO, and hosting implemented </li>
+                <li class="feedback-text-item"> Good code editor, website, hosted on URL or IP address</li>
+                <li class="feedback-text-item"> Code and files are well structured.</li>
+              </ul>
+            </div>
+
+            <h2 class="feedback-header">Improvements</h2>
+            <div class="fw-underline"></div>
+            <div class="negatives">
+              <div class="feedback-img"> <img src="./images/improvement.png" alt="" class="feedback-pic"></div>
+              <ul class="feedback-text">
+                <li class="feedback-text-item"> Mind code duplication</li>
+                <li class="feedback-text-item"> Careful with text over images. Might become difficult to read. </li>
+                <li class="feedback-text-item"> Social media not linked. </li>
+                <li class="feedback-text-item"> Put JS in external file. </li>
+                <li class="feedback-text-item"> Story did not appear to be well prepared.</li>
+              </ul>
+            </div>
             </div>
       </section>
       <!-- END OF PARAGRAPTH 2 -->
