--- a/website-asignment/blog.html
+++ b/website-asignment/blog.html
@@ -102,7 +102,7 @@
               </div>
               <div class="content">
                 <h3>SKC First Feedback</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptates incidunt deserunt harum iure praesentium vero, temporibus sed libero nostrum molestias neque iusto distinctio illo voluptatum illum ex eius, suscipit nisi reprehenderit doloremque sunt voluptatem sapiente deleniti. Eos, aspernatur. Sed incidunt earum, facilis excepturi laboriosam rerum aspernatur recusandae explicabo debitis culpa voluptates. Temporibus ducimus explicabo beatae culpa unde magni corporis impedit! Facilis esse voluptas odit error amet, laudantium quia debitis iure impedit, laboriosam laborum voluptatibus in! Vitae, deleniti iure delectus, eaque magni dolore ducimus consequuntur cumque porro a error animi amet deserunt modi exercitationem at laborum nisi nostrum saepe corrupti?</p>
+                <p>All necessary pages are there with content.Nicely styled.Navigation, side menu, SEO, and hosting implemented.Good code editor, website, hosted on URL or IP address</p>
               </div>
                 <a href="./blog-posts/first-fb.html" class="read-more"></a>
             </div>
